# ermine

./: .gitignore  README.md  main.py  pyproject.toml
ermine/: __init__.py  app.py  enum.py  groups.py  injections.py  request.py  response.py  router.py  static.py  templating.py
ermine/plugs/: __init__.py  alternator.py  event.py  responder.py  routable.py  static.py
tests/: test_wire.py
